<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softonitg.jorge.softondemo.Fragments.SearchFragment">

    <TextView
        android:text="@string/search_instructions_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_search_text_hint"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_search_button_text"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
