<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.softonitg.jorge.softondemo.Fragments.Dialogs.LogOutVerificationDialogFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out_verification_fragment_tv_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/log_out_fragment_yes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/log_out_verification_yes_button_text"
            />

        <Button
            android:id="@+id/log_out_fragment_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/log_out_verification_cancel_button_text"/>

    </LinearLayout>

</LinearLayout>
